k3s/manifests/forgejo/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-cloudflare
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: git.chronobyte.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
  tls:
    - hosts:
        - git.chronobyte.net
      secretName: forgejo-cloudflare-tls
